--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "betterphp/php-recogniser",
     "version": "0.1-dev",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "repositories": [
         {
             "type": "vcs",
@@ -10,7 +12,7 @@
     "require-dev": {
         "betterphp/php-code-style": "dev-master",
         "squizlabs/php_codesniffer": "~2",
-        "phpunit/phpunit": "~5"
+        "phpunit/phpunit": "~6"
     },
     "autoload": {
         "psr-4": {
