--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,14 @@
         {
             "type": "vcs",
             "url": "https://github.com/betterphp/php-code-style.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/betterphp/php-native-mock.git"
         }
     ],
     "require-dev": {
+        "betterphp/php-native-mock": "dev-master",
         "betterphp/php-code-style": "dev-master",
         "squizlabs/php_codesniffer": "~2",
         "phpunit/phpunit": "~6"
